--- a/dolphinscheduler-ui/src/views/projects/workflow/components/dag/dag.module.scss
+++ b/dolphinscheduler-ui/src/views/projects/workflow/components/dag/dag.module.scss
@@ -107,6 +107,9 @@ $bgLight: #ffffff;
     &.icon-sub_process {
       background-image: url('/images/task-icons/sub_process.png');
     }
+    &.icon-dynamic {
+      background-image: url('/images/task-icons/dynamic.png');
+    }
     &.icon-data_quality {
       background-image: url('/images/task-icons/data_quality.png');
     }
@@ -219,6 +222,9 @@ $bgLight: #ffffff;
       }
       &.icon-sub_process {
         background-image: url('/images/task-icons/sub_process_hover.png');
+      }
+      &.icon-dynamic {
+        background-image: url('/images/task-icons/dynamic_hover.png');
       }
       &.icon-data_quality {
         background-image: url('/images/task-icons/data_quality_hover.png');
