--- a/dolphinscheduler-ui/src/views/projects/workflow/definition/tree/use-d3-tree/index.scss
+++ b/dolphinscheduler-ui/src/views/projects/workflow/definition/tree/use-d3-tree/index.scss
@@ -15,23 +15,38 @@
  * limitations under the License.
  */
 
-.content {
-  width: 100%;
-  position: relative;
-
-  .card {
-    margin-bottom: 8px;
-  }
-
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 10px 0;
-    .right {
-      float: right;
-      margin: 3px 0 3px 4px;
-      width: 15%;
+ .tree-model {
+  width: calc(100%);
+  height: calc(100vh - 300px);
+  overflow-x: scroll;
+  .d3-tree {
+    padding-left: 30px;
+    .node {
+      text {
+        font: 11px sans-serif;
+        pointer-events: none;
+      }
+    }
+    rect {
+      cursor: pointer;
+      &.state {
+        stroke: #666;
+        shape-rendering: crispEdges;
+      }
+    }
+    path {
+      &.link{
+        fill: none;
+        stroke: #666;
+        stroke-width: 2px;
+      }
+    }
+    circle {
+      stroke: #666;
+      fill: #0097e0;
+      stroke-width: 1.5px;
+      cursor: pointer;
     }
   }
 }
+
